# emscripten_sdl2_framework

./: .clang-tidy  CMakeLists.txt  Dockerfile  emscripten_sdl2_framework.cpp
.github/workflows/: ci.yml
CMakeModules/: CodeCoverage.cmake
cspell/: project-words.txt
include/: EmscriptenSdl2Framework.hpp  test.hpp
src/: EmscriptenSdl2Framework.cpp  test.cpp
test/: CMakeLists.txt  maintest.cpp
